Fix all errors